@@ -40,7 +40,7 @@ char	*token_domain( char * );
 char	*token_quoted_string( char * );
 char	*token_dot_atom( char * );
 int	header_timestamp( struct envelope *, FILE * );
-int	header_text( int, char *, struct receive_headers * );
+int	header_text( int, char *, struct receive_headers *, char ** );
 int	header_punt( struct line_file * );
 int	header_correct( int, struct line_file *, struct envelope * );
 int	header_file_out( struct line_file *, FILE * );
